# lazar

./: .gitignore  README.md  setup.sh
scripts/: kernel-apply.sh  kernel-build.sh  kernel-edit.sh  kernel-unlock.sh  lazar-chat.sh  migrate-from-clawd.sh
src/: Cargo.toml  sandbox.sb
src/seed-hooks/: README.md
src/seed-hooks/agent-stop.d/: .gitkeep
src/seed-hooks/log-rotation.d/: 00-example-compress-archives.sh.disabled
src/seed-hooks/post-tool.d/: .gitkeep
src/seed-hooks/pre-tool.d/: 00-example-deny-rm-rf.sh.disabled
src/seed-hooks/session-end.d/: 00-example-distill.sh.disabled
src/seed-hooks/session-start.d/: 00-example-project-context.sh.disabled
src/seed-hooks/tick.d/: 00-example-daily-distill.sh.disabled
src/seed-hooks/user-prompt.d/: .gitkeep
src/seed-skills/: INDEX.md
src/seed-skills/_meta/archive-search/: SKILL.md
src/seed-skills/_meta/create-skill/: SKILL.md
src/seed-skills/_meta/create-tui/: SKILL.md
src/seed-skills/_meta/create-tui/references/: stream-json-protocol.md  typescript-readline.md
src/seed-skills/_meta/distill/: SKILL.md
src/seed-skills/_meta/find-capability/: SKILL.md
src/seed-skills/_meta/health-check/: SKILL.md
src/seed-skills/_meta/load-context/: SKILL.md
src/seed-skills/_meta/log-rotation/: SKILL.md
src/seed-skills/_meta/project-context/: SKILL.md
src/seed-skills/_meta/propose-kernel-patch/: SKILL.md
src/seed-skills/_meta/shell-handoff/: SKILL.md
src/seed-skills/memory/: SKILL.md
src/src/: hooks.rs  main.rs  session.rs  verifier.rs
